@@ -207,6 +207,7 @@ FHEM/98_autocreate.pm        rudolfkoenig         http://forum.fhem.de Automatis
 FHEM/98_average.pm           rudolfkoenig         http://forum.fhem.de Automatisierung
 FHEM/98_backup.pm            mfr69bs              http://forum.fhem.de Sonstiges
 FHEM/98_cmdalias.pm          rudolfkoenig         http://forum.fhem.de Automatisierung
+FHEM/98_configDB.pm          betateilchen         http://forum.fhem.de Sonstiges
 FHEM/98_dewpoint.pm          wherzig              http://forum.fhem.de Automatisierung
 FHEM/98_dummy.pm             rudolfkoenig         http://forum.fhem.de Automatisierung
 FHEM/98_fheminfo.pm          mfr69bs              http://forum.fhem.de Sonstiges
